# mecca_ws

./: .gitignore  README.md  current_params.yaml  enc_read.py  enc_reset.py  src.mecca_driver_node  test_m1.py
images/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mecca_driver_node/lib/mecca_driver_node/: led_controller_node  mecca_driver_node  simple_serial
install/mecca_driver_node/share/mecca_driver_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mecca_driver_node/share/mecca_driver_node/config/: joy_teleop.yaml
install/mecca_launch/lib/mecca_launch/: vl53l1x_node
install/mecca_launch/share/mecca_launch/: mecca_bringup.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav_node/lib/nav_node/: nav_node
install/nav_node/share/nav_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navigator/lib/navigator/: navigator_node
install/navigator/share/navigator/: package.dsv  package.ps1  package.sh  package.xml
install/vl53l1x_sensor/lib/vl53l1x_sensor/: vl53l1x_node
install/vl53l1x_sensor/share/vl53l1x_sensor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
mecca_driver_node/: setup.py
mecca_launch/: CMakeLists.txt
mecca_launch/launch/: mecca_rviz.launch.py  serial_bridge.launch.py
navigator/: setup.py
src/: start_mecca.sh
src/deprecated/nav_node/: package.xml
src/face_display/: package.xml  setup.cfg  setup.py
src/face_display/face_display/: face_display_node.py
src/mecanum_description/: CMakeLists.txt  package.xml
src/mecanum_description/urdf/: mecanum.urdf
src/mecca_description/: CMakeLists.txt  package.xml
src/mecca_description/config/: mecanum_controllers.yaml
src/mecca_description/meshes/: chassis_rviz_ascii.stl  chassis_rviz_bin.stl
src/mecca_description/rviz/: meccabot.rviz  robot_navigation.rviz  urdf_display.rviz
src/mecca_description/urdf/: gazebo_control.xacro  inertial_macros.xacro  meccabot.xacro
src/mecca_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mecca_driver/config/: joy_teleop.yaml
src/mecca_driver/mecca_driver/: led_controller_node.py
src/mecca_driver_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mecca_driver_node/config/: controllers.yaml  joint_broadcaster.yaml  joint_state_broadcaster.yaml  joy_teleop.yaml  mecanum_controller.yaml  mecanum_drive_controller.yaml  ros2_control_node.yaml  serial_bridge.yaml
src/mecca_driver_node/mecca_driver_node/: led_controller_node.py  mecca_driver_node.py  serial_translator_node.py  simple_serial.py  teleop_serial_bridge_node.py  ws2812.py
src/mecca_driver_node/mecca_driver_node/serial_comm/: simple_serial.py
src/mecca_driver_node/scripts/: print_controller_parameters.py
src/mecca_hardware_interface/: CMakeLists.txt  mecca_hardware_plugin.xml  package.xml
src/mecca_hardware_interface/include/mecca_hardware_interface/: mecca_hardware.hpp  mecca_hardware_v3.hpp.bak
src/mecca_hardware_interface/src/: mecca_hardware.cpp  mecca_hardware_v3.cpp.bak
src/mecca_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mecca_launch/config/: joy_teleop.yaml  nav2_params.yaml
src/mecca_launch/launch/: display_launch.py  display_urdf.launch.py  joystick_teleop.launch.py  mecca_bringup.launch.py  mecca_launch.py  mecca_launch.py.backup  mecca_rviz.launch.py  mecca_teleop.launch.py  slam_nav_launch.py  slam_only_launch.py  teleop_rviz.launch.py
src/mecca_launch/scripts/: drive.py  simple_wheel_controller.py
src/nav_node/: setup.cfg  setup.py
src/nav_node/nav_node/: nav_node.py
src/navigator/: package.xml
src/navigator/navigator/: navigator_node.py
src/sllidar_ros2/: CMakeLists.txt
src/sllidar_ros2/launch/: sllidar_a1_launch.py
src/utilities/: serial_debug  serial_debug.cpp  test_RGB.py  usb_debug.sh
src/utilities/udev/: check_usb_devices.sh
src/vl53l1x_sensor/: package.xml  setup.cfg  setup.py
src/vl53l1x_sensor/vl53l1x_sensor/: vl53l1x_node.py
stl_files/: A1 RPLidar Mount.stl  BattBox.stl  Cab_Front.stl  Cab_Rear.stl  Cab_Top.stl  README.md  mecca robot cab v1.3mf
utilities/: serial_verify.py  start_mecca.sh  test_serial.py
utilities/udev/: 99-mecca-robot.rules
vl53l1x_sensor/: setup.py
