<?xml version="1.0"?>
<package format="3">
  <name>mecca_driver</name>
  <version>0.0.0</version>
  <description>ROS2 Node for Motor Driver Communication</description>
  <author email="stvenmobile@gmail.com">jetson</author>
  <maintainer email="stvenmobile@gmail.com">jetson</maintainer>
  <license>MIT</license>

  <!-- Build Dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_python</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export Section -->
  <export>
    <build_type>ament_python</build_type>
    <exec_depend>python3-spidev</exec_depend>
  </export>
</package>