<?xml version="1.0"?>
<package format="3">
  <name>mecca_launch</name>
  <version>1.0.0</version>
  <description>Launch scripts for starting the Mecca mecanum‐wheeled robot</description>

  <!-- At least one maintainer is required -->
  <maintainer email="stvenmobile@gmail.com">Steve Phillips</maintainer>

  <!-- A license tag is required -->
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>mecca_description</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>python3-rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>